<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">XiaoMi Video Player</string>

    <!-- Browser -->
    <string name="internal_storage">Internal Storage</string>
    <string name="external_storage">USB Drive</string>
    <string name="no_files">No video files found</string>
    <string name="loading">Loading…</string>

    <!-- Player -->
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="seek_forward">Forward %d sec</string>
    <string name="seek_backward">Backward %d sec</string>
    <string name="overlay_shown">Overlay shown</string>
    <string name="overlay_hidden">Overlay hidden</string>

    <!-- Resume -->
    <string name="resume_title">Resume Playback</string>
    <string name="resume_from">Resume from %s</string>
    <string name="play_from_beginning">Play from beginning</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="playback_settings">Playback Settings</string>
    <string name="overlay_settings">Overlay Settings</string>
    <string name="display_settings">Display Settings</string>
    <string name="storage_settings">Storage Settings</string>
    <string name="about">About</string>

    <string name="seek_backward_time">Seek Backward Time</string>
    <string name="seek_forward_time">Seek Forward Time</string>
    <string name="seconds">seconds</string>

    <string name="overlay_enabled">Enable Overlay</string>
    <string name="overlay_color">Color</string>
    <string name="overlay_width">Width</string>
    <string name="overlay_height">Height</string>
    <string name="overlay_position_x">Position X</string>
    <string name="overlay_position_y">Position Y</string>
    <string name="overlay_opacity">Opacity</string>

    <string name="view_mode">View Mode</string>
    <string name="grid_view">Grid</string>
    <string name="list_view">List</string>
    <string name="show_file_size">Show File Size</string>
    <string name="show_duration">Show Duration</string>

    <string name="default_directory">Default Directory</string>
    <string name="scan_external_storage">Scan External Storage on Launch</string>

    <string name="version">Version</string>
    <string name="supported_formats">Supported Formats</string>
    <string name="license">License</string>

    <!-- Errors -->
    <string name="error_file_not_found">File not found</string>
    <string name="error_unsupported_format">Unsupported format</string>
    <string name="error_playback">Playback error</string>
    <string name="error_storage_permission">Storage permission required</string>
</resources>
